--- a/angular.json
+++ b/angular.json
@@ -31,8 +31,13 @@
                 "output": "assets"
               }
             ],
-            "styles": ["src/styles.css"],
-            "scripts": []
+            "styles": [
+              "src/styles.css",
+              "node_module/sweetalert2/src/sweetalert2.scss"
+              ],
+            "scripts": [
+              "node_module/sweetalert2/dist/sweetalert2.min.js"
+            ]
           },
           "configurations": {
             "production": {
